[project]
name = "pypibt"
version = "0.1.0"
description = "A minimal python implementation of Priority Inheritance with Backtracking (PIBT) for Multi-Agent Path Finding (MAPF)"
authors = [
    { name = "Kei18", email = "keisuke.oku18@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["MAPF", "multi-agent", "path-finding", "PIBT", "robotics", "planning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.25.1",
    "jupyterlab>=3.0.0,<4.0.0a0",
    "matplotlib>=3.7.2",
    "pytest>=7.4.0",
]

[project.urls]
Homepage = "https://github.com/Kei18/pypibt"
Repository = "https://github.com/Kei18/pypibt"
"Bug Tracker" = "https://github.com/Kei18/pypibt/issues"

[dependency-groups]
dev = [
    "jupyterlab-lsp>=4.2.0",
    "jupyterlab-code-formatter>=2.2.1",
    "black>=23.7.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.3",
    "python-lsp-server>=1.7.4",
    "mypy>=1.18.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pypibt"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
